# Aozora

./: Cargo.toml
client/: Cargo.toml  index.html
client/src/: components.rs  main.rs  models.rs
client/src/components/: card.rs  header.rs  timeline.rs  tweet_area.rs  tweet_button.rs
server/: .gitignore  Cargo.toml
server/src/: api.rs  main.rs  model.rs
src/: api.rs  main.rs  model.rs
