[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = "0.5.0"
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
wasm-bindgen-futures = "0.4.41"
wasm-logger = "0.2.0"
web-sys = "0.3.68"
yew = { version = "0.21.0", features = ["csr"] }
